triying to fix a 404 page error

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -186,7 +186,7 @@ form::before{
   height: 100%;
   background: linear-gradient(
     45deg,
-    #0075a3, #00ff00, #0075a3, #00ff00, #0075a3, #00ff00, #0075a3, #00ff00
+    yellow, #00ff00, #0075a3, #00ff00, #0075a3, #00ff00, yellow, #00ff00
   );
   background-size: 800%;
   border-radius: 10px;
